--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.9.8",
+    "el-tree-transfer": "^2.4.7",
     "element-ui": "^2.14.1",
     "qs": "^6.9.4",
     "register-service-worker": "^1.7.1",
